--- a/client/src/index.css
+++ b/client/src/index.css
@@ -665,11 +665,14 @@ textarea.form-input {
 
 .notification-badge {
   position: absolute;
-  top: -4px;
-  right: -6px;
+  top: 0px;
+  /* Closer to icon */
+  right: -2px;
+  /* Closer to icon */
   background: #ff3b30;
   color: white;
-  font-size: 6px !important;
+  font-size: 8px !important;
+  /* Bigger for readability */
   font-weight: 900;
   width: 14px;
   height: 14px;
