--- a/client/src/index.css
+++ b/client/src/index.css
@@ -645,6 +645,14 @@ textarea.form-input {
   /* Default text color */
 }
 
+/* Enforce consistent icon size for alignment */
+.bottom-nav-item span:first-child {
+  font-size: 1.5rem !important;
+  line-height: 1;
+  display: block;
+  margin-bottom: 2px;
+}
+
 .bottom-nav-item::before {
   content: '';
   position: absolute;
